<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_info"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="Информация" />

    <item
        android:id="@+id/navigation_recipe"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="Рецепт" />

    <item
        android:id="@+id/navigation_ingredient"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="Ингредиенты" />

</menu>