...
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:textSize="30sp"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/dishpage_name_to_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:textSize="20sp"
        android:padding="8dp"
        android:visibility="gone"
        android:hint="Введите название блюда"/>

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dishpage_category_text"
        android:layout_width="wrap_content"
...
